tests/reference/asr-test_dict_key5-87496d1.stderr
semantic error: Unhashable type: 'dict'
 --> tests/errors/test_dict_key5.py:2:12
  |
2 |     print({{1: "a", 2: "b"}: "first", {3: "c", 4: "d"}: "second"})
  |            ^^^^^^^^^^^^^^^^ Mutable type 'dict' cannot become a key in dict. Hint: Use an immutable type for key.
